# remote_fun

./: .gitignore  CMakeLists.txt
cmake/: grpc.cmake  protobuf.cmake
include/: handle_grpc.h  handle_json.h  handle_libevent.h  handle_net.h  handle_struct.h  remote_client.h  remote_server.h  remote_string.h  remote_type.h
lib/: libmulti_net_io.a.debug  libmulti_net_io.a.nodebug
proto/: json.proto
src/: handle_grpc_client.cpp  handle_grpc_server.cpp  handle_json.cpp  handle_libevent_client.cpp  handle_libevent_server.cpp  handle_net.cpp  handle_struct.cpp  remote_client.cpp  remote_server.cpp  remote_type.cpp
test/: client_message.cpp  host_config1.txt  host_config2.txt  mess_config.txt  run_server.cpp  server_message.cpp  test_client1.cpp  test_client2.cpp  test_dir.cpp  test_fcntl.cpp  test_json.cpp  test_server.cpp
